--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -114,12 +114,16 @@ header h2{
     font-size: 1.13rem;
 }
 
-.piane-keys .white:active{
+.piane-keys .white.active{
     box-shadow: inset -5px 5px 20px rgba(0, 0, 0,  0.2);
     background: linear-gradient(to bottom #fff 0%, #eee 100%);
 }
 
-.piane-keys .black:active{
+.piane-keys .black.active{
     box-shadow: inset -5px 5px 20px rgba(255, 255, 255,  0.2);
     background: linear-gradient(to bottom #000, #434343);
+}
+
+.piane-keys .key.hide span{
+   display: none;
 }
